dt-cf-backup release.
- Support Rackspace Cloud Files
- Try to get some support on non GNU systems.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,8 @@
+Original authors of this script :
+
 Damon Timm <damontimm@gmail.com> <http://blog.damontimm.com> 
 Mario Santagiuliana <mario@marionline.it> <http://www.marionline.it>
+
+Modification for Rackspace Cloud Files :
+
+Chmouel Boudjnah <chmouel@chmouel.com> <http://blog.chmouel.com>
