--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.4-cf Version (05/01/11)
+==========================
+   * Modification to make it works on Rackspace Cloud Files.
+
 0.4 Version Four (03/13/10)
 ===========================
 
