--- a/README
+++ b/README
@@ -1,8 +1,12 @@
 ABOUT THIS SCRIPT
 =================
 
+This bash script is a fork of the excellent dt-s3-backup to work with
+Rackspace Cloud Files all kudos goes to thornomad for this good work I
+have just made it to work with Rackspace CloudFiles.
+
 This bash script was designed to automate and simplify the remote backup
-process of duplicity on Amazon S3.  After your script is configured, you can
+process of duplicity on Rackspace Cloud Files .  After your script is configured, you can
 easily backup, restore, verify and clean (either via cron or manually) your
 data without having to remember lots of different command options and
 passphrases.
@@ -11,10 +15,10 @@ Most importantly, you can easily backup the script and your gpg key in a
 convenient passphrase-encrypted file.  This comes in in handy if/when your
 machine ever does go belly up. 
 
-More information about this script avaiable at:
+More information about the original s3 script avaiable at:
 http://damontimm.com/code/dt-s3-backup
 
-Latest version of the code is available at:
+Latest version of the original s3 script  is available at:
 http://github.com/thornomad/dt-s3-backup
 
 BEFORE YOU START
@@ -27,54 +31,53 @@ configured in someway.
 
 You can use multiple copies of the script with different settings for different
 backup scenarios.  It is designed to run as a cron job and will log information
-to a text file (including remote file sizes, if you have s3cmd installed).  Be
-sure to make the script executable (chmod +x) before you hit the gas.
+to a text file.  Be sure to make the script executable (chmod +x) before you hit the gas.
 
 REQUIREMENTS
 ============
 
-* duplicity
+* duplicity.
+* python-cloudfiles 
 * gpg
-* Amazon S3 
-* s3cmd (optional)
+* Rackspace Cloud Files account
 
 COMMON USAGE EXAMPLES
 =====================
 
 * View help:
-    $ dt-s3-backup.sh
+    $ dt-cf-backup.sh
 
 * Run an incremental backup:
-	$ dt-s3-backup.sh --backup
+	$ dt-cf-backup.sh --backup
 
 * Force a one-off full backup:
-    $ dt-s3-backup.sh --full
+    $ dt-cf-backup.sh --full
 
 * Restore your entire backup:
-	$ dt-s3-backup.sh --restore 
+	$ dt-cf-backup.sh --restore 
     You will be prompted for a restore directory
 
-	$ dt-s3-backup.sh --restore /home/user/restore-folder
+	$ dt-cf-backup.sh --restore /home/user/restore-folder
     You can also provide a restore folder on the command line.
 
 * Restore a specific file in the backup:
-    $ dt-s3-backup.sh --restore-file
+    $ dt-cf-backup.sh --restore-file
     You will be prompted for a file to restore to the current directory
 
-    $ dt-s3-backup.sh --restore-file img/mom.jpg
+    $ dt-cf-backup.sh --restore-file img/mom.jpg
     Restores the file img/mom.jpg to the current directory
 
-    $ dt-s3-backup.sh --restore-file img/mom.jpg /home/user/i-love-mom.jpg
+    $ dt-cf-backup.sh --restore-file img/mom.jpg /home/user/i-love-mom.jpg
     Restores the file img/mom.jpg to /home/user/i-love-mom.jpg
 
 * List files in the remote archive
-	$ dt-s3-backup.sh --list-current-files
+	$ dt-cf-backup.sh --list-current-files
 
 * Verify the backup
-    $ dt-s3-backup.sh --verify
+    $ dt-cf-backup.sh --verify
 
 * Backup the script and gpg key (for safekeeping)
-    $ dt-s3-backup.sh --backup-script
+    $ dt-cf-backup.sh --backup-script
 
 NEXT VERSION WISH LIST
 ======================
